blur-admin/app/stylesheets/partials/_zookeepers.scss
@mixin outer-container {
  margin-bottom: 2em;
  
}
@mixin inner-container {

  margin-bottom: 2em;
}

#zookeeper_wrapper {

  margin-top: 2em;
  @include full;

  #blur, #zookeeper{
    @include outer-container;
  }

  #zookeeper {
    @include columns(30,$total-cols);
    border:$twitter-border;
    padding-top:20px;
    @include border-radius(5px);
    position:relative;
    table {
      @include prefix(0.25);
      @include columns(29.5);
    }
    
    .title{
      position:absolute;
      display:block;
      top:-18px;
      left:20px;
      background:$bg-blue-color;
    }
  }

  #blur {
    @include columns(30,$total-cols);
    margin-bottom: 165px;
    border:$twitter-border;
    @include border-radius(5px);
    padding-top:20px;
    position:relative;
    #controllers-placeholder,#shards-placeholder{
      margin-top: 5px;
    }
    #controllers, #shards{ @include columns(14.25, $total-cols); }
    .blur_container{ @include inner-container; @include prefix(0.25);}
    #controllers{ @include prefix(0.25); }
    #shards{ @include omega($total-cols); @include suffix(0.25);}
    .title{
      position:absolute;
      display:block;
      top:-18px;
      left:20px;
      background:$bg-blue-color;
    }
  }
  .status{
  width:75px;
  }
  h3 { margin-top: 0.5em; }
}

#zookeepers_wrapper{
  display: none;
  @include full;
  @include standard-font;
  margin-top: 2em;
  margin-bottom: 165px;
  border:$twitter-border;
  @include border-radius(5px);
  position:relative;
  

  .title{
    position:absolute;
    display:block;
    top:-18px;
    left:20px;
    background:$bg-blue-color;
  }

  .zookeeper_info {
    min-width: 400px;
    margin-left: 20px;
    margin-right: 10px;
    margin-bottom: 20px;
    margin-top: 20px;
    float: left;
    display: inline-block;
    table{
      margin-bottom:0;
    }
    &:hover {
      cursor: pointer;
      background: #FFFCD6;
    }
  }
  .zookeeper-title{
    font-size:125%;
    padding: 5px 10px;
    margin:0;
    display:table-cell;
    text-align: left;
  }
  .warning { height: 18px; text-align: center; }
  .status{
  width:160px;
  }
  #zookeepers { @include columns(30,$total-cols); height: 100%; padding-bottom: 85px; }


  .number, .word, .zookeeper-name, .zookeeper-status {display: inline-block; }
  .number {width: 20px; text-align: right; }
  .word {width: 130px; text-align: left;}

}

.grey_box { background-color: $grey-color; @include border; }

